# RTReflection

./: CMakeLists.txt  README.md
RTReflection/: CMakeLists.txt  RTReflection.cpp  RTReflection.h
RTReflection/tests/: MyObject.h  MySubObject.h  Register.h
RTReflection/types/: Attribute.h  Class.h  Field.h  Method.h  Object.h  Type.h  Variant.h
