# CMakeList.txt : CMake project for RTReflection, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (RTReflection "RTReflection.cpp" "RTReflection.h")

# TODO: Add tests and install targets if needed.
